13_k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hse-deployment
spec:
  replicas: 6
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector: # подбирает pod-ы с такими же лейблами
    matchLabels:
      app: frontend
  template: # шаблон для создания pod-ов
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: hse-pod
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: my-config
