13_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hse-service
spec:
  selector:
    app: frontend
  ports:
  - port: 80 # порт сервиса
    targetPort: 80 # порт контейнера в pod-e
  type: ClusterIP
