13_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shvm-ingress
  labels:
    name: shvm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: shvm-ai.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shvm-service # название сервиса
            port:
              number: 80 # порт сервиса
      # - pathType: ImplementationSpecific
      #   path: "/backend(/|$)(.*)"
      #   backend:
      #     service:
      #       name: shvm-service-2
      #       port:
      #         number: 80
